[tool.poetry]
name = "pycli"
version = "0.0.1"
description = ""
authors = ["rndmit <rndmit@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.2"
rich = "^13.3.2"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
pydoc-markdown = {extras = ["novella"], version = "^4.6.4"}
novella = "^0.2.5"
pytest = "^7.3.1"
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.yapf]
based_on_style = "google"
spaces_before_comment = 4
split_before_logical_operator = true
column_limit = 79